Fix flickering text bug in Safari
¯\_(ツ)_/¯

--- a/docroot/sites/all/themes/ilr_theme/css/union.css
+++ b/docroot/sites/all/themes/ilr_theme/css/union.css
@@ -1599,7 +1599,7 @@ body {
 }
 
 html {
-  font-size: var(--cu-font-size-percentage);
+  font-size: 113%;
   line-height: var(--cu-line-height);
   font-weight: var(--cu-font-weight);
 }
